# ArchiCAD-Api-27-Template

./: CMakeLists.txt  LICENSE  READ ME.txt  README.md  build_commands.bat  config.json
EUChek.IFCExporter/: CMakeLists.txt  EUChek.IFCExporter.csproj
EUChek.IFCExporter/Properties/: AssemblyInfo.cs
EUChek.IFCExporter/UI/Windows/: MainWindow.xaml  MainWindow.xaml.cs
IfcExporter/: .gitignore  IfcExporter.csproj  MyDotNetClass.cs  MyKey.snk  READ ME.txt
IfcExporter/Properties/: AssemblyInfo.cs
IfcExporter/UI/Windows/: MainWindow.xaml  MainWindow.xaml.cs
RFIX/: AddOnFix.grc
RINT/: AddOn.grc
Src/: AddOnMain.cpp
Tools/: BuildAddOn.py
WpfWrapper/: AssemblyInfo.cpp  CMakeLists.txt  WpfWrapper.cpp  WpfWrapper.h  WpfWrapper.vcxproj  WpfWrapper.vcxproj.filters  WpfWrapperBridge.cpp  WpfWrapperBridge.h
WpfWrapper/x64/Debug/: WpfWrapper.dll.recipe  WpfWrapper.vcxproj.AssemblyReference.cache  WpfWrapper.vcxproj.FileListAbsolute.txt
WpfWrapper/x64/Debug/WpfWrapper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  WpfWrapper.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  metagen.read.1.tlog  metagen.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
WpfWrapper/x64/Release/: WpfWrapper.dll.recipe  WpfWrapper.vcxproj.AssemblyReference.cache  WpfWrapper.vcxproj.FileListAbsolute.txt
WpfWrapper/x64/Release/WpfWrapper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  EUCHEK.IFCEXPORTER.DLL.metagen  WpfWrapper.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  metagen.read.1.tlog  metagen.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
